Introduce flags to limit tags for third-party sources